# Android-ZstandardForAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xayah/zstandardforandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xayah/zstandardforandroid/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xayah/zstandardforandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
zstandard/: build.gradle
zstandard/src/main/cpp/: CMakeLists.txt  zstandard.cpp
zstandard/src/main/java/com/xayah/zstandard/native/: Zstandard.kt
